# Disseminate

./: .gitignore  .gitmodules  CMakeLists.txt  Configuration.h  Configuration.mm  Configuration.ui  Disseminate.cpp  Disseminate.h  Disseminate.pro  Disseminate.ui  Helpers.h  IconLabel.cpp  IconLabel.h  Info.plist.in  Item.h  KeyInput.cpp  KeyInput.h  KeyInput.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Preferences.cpp  Preferences.h  Preferences.ui  ProcessInformation.h  ProcessInformation.mm  TemplateChooser.cpp  TemplateChooser.h  TemplateChooser.ui  Templates.cpp  Templates.h  Templates.ui  Utils.h  Utils.mm  WindowSelector.cpp  WindowSelector.h  WindowSelector.ui  WindowSelectorOSX.h  WindowSelectorOSX.mm  configure.sh  (+3 more)
Swizzler/: CMakeLists.txt  CocoaUtils.h  EventLoop.h  EventLoop.mm  Lua.cpp  Lua.h  MessagePort.h  MessagePort.mm  ScriptEngine.h  ScriptEngine.mm  Swizzler.pro  main.m  main.mm
buffers/: FlatbufferTypes.h  KeyEvent.fbs  MouseEvent.fbs  RemoteAdd.fbs  Settings.fbs
common/: CocoaUtils.h  MessagePort.h  MessagePort.mm
icons/: AppIcon.icns  genappicon.sh
